# vouch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: gemini-api.md  judging-criteria-developer-tooling.md  revdiff-deep-dive.md
docs/superpowers/plans/: 2026-04-26-vouch.md
docs/superpowers/specs/: 2026-04-26-ardiff-analysis.md  2026-04-26-vouch-design.md
fixtures/: auth_change.diff
fixtures/responses/: analyze.bab397f4ac2cd854.json  analyze.json  semantic_postprocess.a064f678feaf6456.json  semantic_postprocess.json
scripts/: capture_demo.py  demo.sh  demo.tape  demo_expect.exp  record_demo.sh
tests/: setup_fixture.sh  test_cache.py  test_delivery.py  test_diff_input.py  test_feedback.py  test_integration.py  test_models.py  test_parser.py  test_vouch_analysis.py  test_vouch_chunking.py  test_vouch_semantic.py
vouch/: __main__.py  cache.py  cli.py  cmux.py  diff_input.py  feedback.py  help.py  hook.py  llm.py  models.py  parser.py  tui.py
