[project]
name = "vouch"
version = "0.1.0"
description = "Closed-loop AI diff reviewer for the agentic-coding era"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "youngjin.lee"}]
requires-python = ">=3.9"
dependencies = [
  "textual>=0.79,<1.0",
  "unidiff>=0.7,<1.0",
  "google-genai>=0.3,<1.0",
]
keywords = ["ai", "code-review", "diff", "cmux", "agent", "tui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Repository = "https://github.com/YounggLee/vouch"

[project.scripts]
vouch = "vouch.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vouch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["fixtures", ".venv"]
